--- a/Static/css/indexEstilos.css
+++ b/Static/css/indexEstilos.css
@@ -127,6 +127,7 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
+        border-radius: 8px;
     }
     
     .user-information > div:nth-child(4) > p:nth-child(2) {
@@ -136,7 +137,7 @@
 
     .opciones{
         font-size: 17px;
-        cursor: pointer;
+      
       
         
         width: 140px;
@@ -195,7 +196,7 @@
     #dashboard-title{
        margin-top: 15px;
         font-size: 45px;
-        color: #FF5A09;
+        color: #ffffff;
         font-weight: 600;
         font-family: Segoe UI,Frutiger,Frutiger Linotype,Dejavu Sans,Helvetica Neue,Arial,sans-serif; 
     }
