--- a/Templates/compilador.html
+++ b/Templates/compilador.html
@@ -1,6 +1,7 @@
 
 {% extends 'navbar.html' %}
 {% block content %}
+<title>Compilador</title>
 <div id="mid-container-ajuste">
     <div id="container-top">
         <div id="compilador-top">
