--- a/Templates/dashboard.html
+++ b/Templates/dashboard.html
@@ -1,7 +1,7 @@
 {% extends 'navbar.html' %}
 {% load static %}
 {% block content %}
-
+<title>DataBass</title>
 {% if messages %}
     <ul class="messages">
         {% for message in messages %}
@@ -24,7 +24,7 @@
             <div id="right-dashboard-container-middle">
                 <P>Sin análisis de grandes volúmenes de datos, las empresas son ciegos y sordos, vagando hacia fuera sobre la web como ciervos en una autopista.
                     </P>
-                    <b id="autor">– Geoffrey Moore</b>
+                    <b id="autor" style="color:#FF5A09">– Geoffrey Moore</b>
             </div>
         </div>
     </div>
