--- a/Templates/maestro/tabla31.html
+++ b/Templates/maestro/tabla31.html
@@ -2,9 +2,7 @@
 {% block content %}
 
 <style>
-    #table,
-    th,
-    td {
+    #table, th, td{ 
         padding: 10px;
         border: 1px solid black;
         border-collapse: collapse;
@@ -16,29 +14,28 @@
 <div>
     {% if messages %}
     {% for message in messages %}
-    <p class="textoResultadoRespuestas">{{message}}</p>
+        <p>{{message}}</p>
     {% endfor %}
     {% endif %}
 
-    <form class="formResultados" action="{% url 'getRespuesta31' idAlumno=alumno.id %}" method="POST">
+    <form action="{% url 'getRespuesta31' idAlumno=alumno.id %}" method="POST">
         {% csrf_token %}
         {{form.as_p}}
-        <input type="submit" name="send" id="btn-enviar" value="Calificar" class="submitRespuestas">
+        <input type="submit" name="send" id="btn-enviar" value="Calificar">
     </form>
 </div>
 
-<p class="tituloejercicioRespuestas">Ejercicio #1.1.</p>
-<div class="contenidoTablaRespuestas">
-    <table class="tablaRespuestas">
-        {% for key, value in respuesta.items %}
-        <tr>
-            <th>{{key}}</th>
-            {% for val in value %}
+Ejercicio #1.1. 
+
+<table>
+    {% for key, value in respuesta.items %} 
+    <tr>
+        <th>{{key}}</th>
+        {% for val in value %}
             <td>{{val}}</td>
-            {% endfor %}
-        </tr>
         {% endfor %}
-    </table>
-</div>
+    </tr>
+    {% endfor %}
+</table>
 
 {% endblock %}
