--- a/Templates/login.html
+++ b/Templates/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">    <title>Login</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">    <title>DataBass</title>
 </head>
 <body>
     <div id="principalLogin">
@@ -18,10 +18,10 @@
                     <p id="tituloLogin">Iniciar Sesión</p>
                     {% csrf_token %}
 
-                    {{ form.non_field_errors }}
+                 
 
                     {% for field in form %}
-                    <label class="inputsLogin" for="{{ form.field.name }}">{{field.label_tag}}</label>
+                    <label class="textosLogin" for="{{ form.field.name }}">{{field.label_tag}}</label>
                         <br>  
                         {{field.errors }}
                         <br>
@@ -31,11 +31,12 @@
                         <br>
                     {% endfor %}
                     <div id="parrafoLogin">
-                        <p>Si es la primera vez que inicias sesión,</p> 
-                        <p>tu contraseña  es tu expediente seguido </p> 
-                        <p> de un punto.</p>
+                        <p>**Si es la primera vez que ingresas, tu contraseña es tu expediente seguido de un punto.</p> 
+                       
                     </div>
+                   
                     <input type="submit" value="Iniciar sesión" id="botonLogin">
+                    {{ form.non_field_errors }}
                 </form>
  
             </div>
