--- a/Templates/maestro/respuestas31.html
+++ b/Templates/maestro/respuestas31.html
@@ -1,87 +1,47 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-
 <head>
 	<title>Ejercicios</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/estilos.css' %}">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet"> 
 	<script src="{% static 'js/funcionesUriel.js' %}"></script>
 	<script src="{% static 'js/jQuery.js' %}"></script>
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 	<!-- <script src="https://code.jquery.com/jquery-1.12.4.js"></script> -->
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
-
 <body>
-	<div class="container">
-		<div class="row">
-			<nav class="nav-menu">
-				<a href="{% url 'dashboard' %}" style="text-decoration: none;"><p id="tituloEjercicio1" class="titulo-data">Data</p></a>
-				<a href="{% url 'dashboard' %}" style="text-decoration: none;"><p id="tituloEjercicio2" class="titulo-base">Bass</p></a> 
-				<ul class="navbar-list">
-					<li class="opciones"><a href="{% url 'dashboard' %}" class="opcionInicio">Inicio</a></li>
-					<!-- <li class="opciones"><a href="{% url 'unidades' %}" class="opcionContenido">Contenido</a></li>
-					<li class="opciones"><a href="{% url 'compilador' %}" class="opcionHerramientas">Compilador</a></li> -->
-				</ul>		
-				<div class="navbar-profile">
-					<!-- <div class="navbar-notification">
-						
-						<div class="navbar-notification-count">1</div>
-					</div> -->
-					<div class="navbar-notification navbar-avatar">
-						<div class="navbar-picture">
-							<a href="{% url 'perfil' %}">
-								<img src="{% static 'img/perfil.jpg' %}" alt="" class="img-profile">
-							</a>
-							
-						</div>
-					</div>
-							<div class="navbar-logout navbar-avatar">
-								<div >
-									<a href="{% url 'cerrarSesion' %}">
-										<img src="{% static 'img/logout.png' %}" alt="" class="img-logout">
-									</a>
-								</div>
-							</div>
-					
-				</div>
-			</nav>
-			
-		</div>
-	<div class="principalRespuestas">
-		<div class="contenidoRespuestas">
-			<div class="clasesRespuestas">
-				<p>Clases:</p>
-				{% regroup alumnos by alumno.clase as lista_clases %}
-				<ul>
-					{% for clase in lista_clases %}
-					<li>{{clase.grouper}}
-						<ul>
-							{% for respuesta in clase.list %}
-							<a href="{% url 'getRespuesta31' idAlumno=respuesta.alumno.id %}">
-								<li>{{respuesta.alumno.usuario.get_full_name}}</li>
-							</a>
+	<div style=" margin: 10px;width: 90vw; background-color: green; height: 80vh; display: flex; flex-direction: row;">
 
-							{% endfor %}
-						</ul>
-					</li>
+		<div style="width: 20%; height: 100%; background-color: red;">
+			<p>Clases:</p>
+			{% regroup alumnos by alumno.clase as lista_clases %}
+			<ul >
+			{% for clase in lista_clases %}
+				<li>{{clase.grouper}}
+					<ul>
+					{% for respuesta in clase.list %}
+						<a href="{% url 'getRespuesta31' idAlumno=respuesta.alumno.id %}">
+							<li>{{respuesta.alumno.usuario.get_full_name}}</li>
+						</a>
+						
 					{% endfor %}
-				</ul>
-			</div>
-			<div class="entreRespuestas">
-			</div>	
-				<div class="clasesResultadoRespuestas">
-					{% block content %}
-					{% endblock %}
-			</div>
+					</ul>
+				</li>
+			{% endfor %}
+			</ul>
+		</div>
+
+		<div style="width: 80%; height: 100%; background-color: yellow;">
+			{% block content %}
+			{% endblock %}
 		</div>
 	</div>
 
-
-
+	
+	
 </body>
-
 </html>
