--- a/Templates/navbar.html
+++ b/Templates/navbar.html
@@ -9,8 +9,11 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/indexEstilos.css' %}">   
     <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
+    
+  
+    
     <link rel="icon" type="image/png" href="{% static 'img/favicon-96x96.png'%}">
-    <title>Compilador</title>
+   
 </head>
 <body>
     <div id="Principal">
@@ -59,7 +62,8 @@
         
         
      </div>
-
+     <script src="{% static 'js/morris.min.js' %}"></script>
+     <script src="{% static 'js/graficas.js' %}"></script>
      <script src="{% static 'js/compilador lib/codemirror.js' %}"></script>
      <script src="{% static 'js/sql.js' %}"></script>
      <script src="{% static 'js/Compilador.js' %}"></script>
