--- a/Templates/maestro/respuestas31.html
+++ b/Templates/maestro/respuestas31.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/estilos.css' %}">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	<script src="{% static 'js/funcionesUriel.js' %}"></script>
 	<script src="{% static 'js/jQuery.js' %}"></script>
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
@@ -19,69 +19,67 @@
 	<div class="container">
 		<div class="row">
 			<nav class="nav-menu">
-				<a href="{% url 'dashboard' %}" style="text-decoration: none;"><p id="tituloEjercicio1" class="titulo-data">Data</p></a>
-				<a href="{% url 'dashboard' %}" style="text-decoration: none;"><p id="tituloEjercicio2" class="titulo-base">Bass</p></a> 
+				<a href="{% url 'dashboard' %}" style="text-decoration: none;">
+					<p id="tituloEjercicio1" class="titulo-data">Data</p>
+				</a>
+				<a href="{% url 'dashboard' %}" style="text-decoration: none;">
+					<p id="tituloEjercicio2" class="titulo-base">Bass</p>
+				</a>
 				<ul class="navbar-list">
 					<li class="opciones"><a href="{% url 'dashboard' %}" class="opcionInicio">Inicio</a></li>
-					<!-- <li class="opciones"><a href="{% url 'unidades' %}" class="opcionContenido">Contenido</a></li>
-					<li class="opciones"><a href="{% url 'compilador' %}" class="opcionHerramientas">Compilador</a></li> -->
-				</ul>		
+					<li class="opciones"><a href="{% url 'respuestas31' %}" class="opcionContenido">Respuestas</a></li>
+					<li class="opciones"><a href="{% url 'getCalificaciones' %}"
+							class="opcionHerramientas">Calificaciones</a></li>
+					<li class="opciones"><a href="{% url 'ejercicios' %}" class="opcionHerramientas">Estado</a></li>
+				</ul>
 				<div class="navbar-profile">
-					<!-- <div class="navbar-notification">
-						
-						<div class="navbar-notification-count">1</div>
-					</div> -->
 					<div class="navbar-notification navbar-avatar">
 						<div class="navbar-picture">
 							<a href="{% url 'perfil' %}">
 								<img src="{% static 'img/perfil.jpg' %}" alt="" class="img-profile">
 							</a>
-							
 						</div>
 					</div>
-							<div class="navbar-logout navbar-avatar">
-								<div >
-									<a href="{% url 'cerrarSesion' %}">
-										<img src="{% static 'img/logout.png' %}" alt="" class="img-logout">
-									</a>
-								</div>
-							</div>
-					
+					<div class="navbar-logout navbar-avatar">
+						<div>
+							<a href="{% url 'cerrarSesion' %}">
+								<img src="{% static 'img/logout.png' %}" alt="" class="img-logout">
+							</a>
+						</div>
+					</div>
 				</div>
 			</nav>
-			
-		</div>
-	<div class="principalRespuestas">
-		<div class="contenidoRespuestas">
-			<div class="clasesRespuestas">
-				<p>Clases:</p>
-				{% regroup alumnos by alumno.clase as lista_clases %}
-				<ul>
-					{% for clase in lista_clases %}
-					<li>{{clase.grouper}}
-						<ul>
-							{% for respuesta in clase.list %}
-							<a href="{% url 'getRespuesta31' idAlumno=respuesta.alumno.id %}">
-								<li>{{respuesta.alumno.usuario.get_full_name}}</li>
-							</a>
 
-							{% endfor %}
-						</ul>
-					</li>
-					{% endfor %}
-				</ul>
-			</div>
-			<div class="entreRespuestas">
-			</div>	
+		</div>
+		<div class="principalRespuestas">
+			<div class="contenidoRespuestas">
+				<div class="clasesRespuestas">
+					<p>Clases:</p>
+					{% regroup alumnos by alumno.clase as lista_clases %}
+					<ul>
+						{% for clase in lista_clases %}
+						<li>
+							<p class="nombreGrupo">{{clase.grouper}}</p>
+							<ul>
+								{% for respuesta in clase.list %}
+								<a href="{% url 'getRespuesta31' idAlumno=respuesta.alumno.id %}">
+									<li onclick="cambiarColor()">{{respuesta.alumno.usuario.get_full_name}}</li>
+								</a>
+								{% endfor %}
+							</ul>
+						</li>
+						{% endfor %}
+					</ul>
+				</div>
+				<div class="entreRespuestas">
+				</div>
 				<div class="clasesResultadoRespuestas">
+					<p class="tituloclasesResultadoRespuestas">Datos del alumno</p>
 					{% block content %}
 					{% endblock %}
+				</div>
 			</div>
 		</div>
-	</div>
-
-
-
 </body>
 
 </html>
