--- a/Templates/actividadesEjercicios.html
+++ b/Templates/actividadesEjercicios.html
@@ -12,6 +12,9 @@
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> -->
+	<!-- <script src="{% static 'libs/jquery.html-svg-connect.js'%}"></script> -->
+	<!-- <link rel="stylesheet" href="{% static 'css/drag.css'%}"> -->
 </head>
 <body>
 	<div id="principalEjercicios">
