*fix* Visible unity and exercise in Ejercicios. Actual ID's ejercicios

--- a/Templates/actividadesEjercicios.html
+++ b/Templates/actividadesEjercicios.html
@@ -36,6 +36,8 @@
 						<a href="{% url 'unidad' pk=unidad.id %}">
 							{% if unidad.id == unidad_seleccionada.id %}
 								<div class="u1" id="unidad-{{ unidad.id }}">{{forloop.counter}}</div>
+							{% elif unidad.id == ejercicio_seleccionado.unidad.id %}
+								<div class="u1" id="unidad-{{ unidad.id }}">{{forloop.counter}}</div>
 							{% else %}
 								<div class="u2" id="unidad-{{ unidad.id }}">{{forloop.counter}}</div>
 							{% endif %}
@@ -58,9 +60,18 @@
 						{% if ejercicios.count > 0 %}
 							{% for ejercicio in ejercicios %}
 								{% if ejercicio.is_active %}
+									<!-- <a href="{% url 'ejercicio' pk=ejercicio.unidad.id id=ejercicio.id %}">
+										<div class="t6" id="ejercicio-{{ejercicio.id}}">{{ejercicio.id}}</div>
+									</a> -->
+									{% if ejercicio.id == ejercicio_seleccionado.id %}
 									<a href="{% url 'ejercicio' pk=ejercicio.unidad.id id=ejercicio.id %}">
-										<div class="t6" id="ejercicio-{{ejercicio.id}}">{{forloop.counter}}</div>
+										<div class="u1" id="ejercicio-{{ejercicio.id}}">{{ejercicio.id}}</div>
 									</a>
+									{% else %}
+										<a href="{% url 'ejercicio' pk=ejercicio.unidad.id id=ejercicio.id %}">
+											<div class="t6" id="ejercicio-{{ejercicio.id}}">{{ejercicio.id}}</div>
+										</a>
+									{% endif %}
 								{% endif %}
 							{% endfor %}
 						{% else %}
@@ -91,7 +102,7 @@
 						{% endif %}
 
 						{% if intentos %}
-							<p id="intentos-contenedor">Intentos: <span id="intentos" >{{intentos}}</span></p>
+							<p id="intentos-contenedor">Intentos restantes: <span id="intentos" >{{intentos}}</span></p>
 						{% endif %}
 					</div>
 				</div>
