--- a/Templates/ejercicios/ejercicio-5-2.html
+++ b/Templates/ejercicios/ejercicio-5-2.html
@@ -56,6 +56,7 @@
 <ul id="sortable2" class="dropfalse">
   LIBRO
   <!-- ORACLE -->
+  <li class="ui-state-default">PK - idLibro</li>
   <li class="ui-state-default">titulo</li>
   <li class="ui-state-default">autor</li>
   <li class="ui-state-default">editorial</li>
@@ -67,7 +68,7 @@
 <ul id="sortable3" class="dropfalse">
   EMPLEADO
   <!-- ORACLE -->
-  <li class="ui-state-default">clave</li>
+  <li class="ui-state-default">PK - clave</li>
   <li class="ui-state-default">nombreEmpleado</li>
   <li class="ui-state-default">puesto</li>
   <li class="ui-state-default">fechaContratacion</li>
@@ -76,7 +77,7 @@
 <ul id="sortable4" class="dropfalse">
   ALUMNO
   <!-- ORACLE -->
-  <li class="ui-state-default">expediente</li>
+  <li class="ui-state-default">PK - expediente</li>
   <li class="ui-state-default">nombreAlumno</li>
   <li class="ui-state-default">Plan</li>
   <li class="ui-state-default">fechaIngreso</li>
