Fixed arrow relation

--- a/Templates/actividadesEjercicios.html
+++ b/Templates/actividadesEjercicios.html
@@ -85,6 +85,12 @@
 		</div>
 
 		<div id="contenidoEjercicios">
+			<div style=" top: 268px; left: 522.96875px; background-color: green;"></div>
+			<div class="main" id="paths-container">
+				<div id="svgContainer">
+					<svg></svg>
+				</div>
+			</div>
 			<div id="encabezado-contenidoEjercicios">
 				<div id="titulo-contenidoEjercicos">
 					{% if unidad_seleccionada %}
