--- a/Static/css/drag.css
+++ b/Static/css/drag.css
@@ -78,9 +78,7 @@ justify-content: center;
   align-items: center;
   
 }
-.fk-container>b{
-  color: green;
-}
+
 .row{
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -109,23 +107,15 @@ justify-content: center;
 svg {
   width: 100%;
   height: 100%;
+  position: fixed;
 }
 
 #svgContainer {
   width: 100%;
-  height: 100%;
-  z-index: -10;
-  position: absolute;
+  z-index: 0;
+  position: fixed;
 }
 
-.shape {
-  position: absolute; 
-  width: 10px; 
-  height: 10px;
-  background-color: green;
-  border-radius: 50% 50%;
-}
-
-svg, path {
-  z-index: '9999999';
+path {
+    stroke-width: 2.5px;
 }
