--- a/Static/css/estilosEjercicios.css
+++ b/Static/css/estilosEjercicios.css
@@ -243,7 +243,7 @@ font-size: 16px;
                     }
                     .unidadesEjerciciosContenedor-overflow{
                         width: 100%;
-                        
+                        z-index: 9999999;
                         display: flex ;
                         align-items: center;
                         justify-content: center;
@@ -416,6 +416,7 @@ box-shadow: 6px 6px 5px 0px rgba(50,50,69,1);
             justify-content:center;
             /* align-items: center; */
             flex-wrap: wrap;
+            z-index: 999999;
         }
 
             #encabezado-contenidoEjercicios{
@@ -502,6 +503,7 @@ box-shadow: 6px 6px 5px 0px rgba(50,50,69,1);
         #contenido-contenidoEjercicios-overflow{
             width: 90%;
             font-size: 18px;
+            z-index: 999999;
         }
         #sortable1 li, #sortable2 li, #sortable3 li, #sortable4 li, #sortable5 li{
             font-size: 17px !important;
