Cambios despues de Revision Final

--- a/Templates/actividadesEjercicios.html
+++ b/Templates/actividadesEjercicios.html
@@ -85,7 +85,7 @@
 						<p><span id="calificacion_calificacion">{{calificacion.calificacion}}</span>/10</p>
 						
 						{% if intentos %}
-							<p id="intentos-contenedor">Intentos: <span id="intentos" >{{intentos}}</span></p>
+							<p id="intentos-contenedor">Intentos Restantes: <span id="intentos" >{{intentos}}</span></p>
 						{% endif %}
 					</div>
 				</div>
