--- a/Static/css/compilador.css
+++ b/Static/css/compilador.css
@@ -195,6 +195,7 @@
         height: 15%;
        
         display: flex;
+        justify-content: flex-end;
     }
     #compilador-bottom{
         width: 100%;
@@ -207,9 +208,9 @@
     #titulo{
         display: flex;
         align-items: center;
-        width: 60%;
+        width: 70%;
         color: white;
-        padding-left: 20px;
+        
     }
     #buttons{
         width: 35%;
