--- a/Templates/maestro/dashboard.html
+++ b/Templates/maestro/dashboard.html
@@ -69,19 +69,19 @@
                 <div id="cuadros-container">
                     <a href="{% url 'respuestas31' %}">
                         <div class="dashboard-cuadros">
-                            <img src="{% static 'img/bd.png' %}" alt="">
+                            <img src="{% static 'img/copy.png' %}" alt="">
                             <text id="text1">Respuestas</text><b style="color: #FF5A09;">31</b>
                         </div>
                     </a>
                     <a href="{% url 'getCalificaciones' %}">
                         <div class="dashboard-cuadros">
-                            <img src="{% static 'img/bd.png' %}" alt="">
+                            <img src="{% static 'img/grade.png' %}" alt="">
                             <text id="text1">Calificaciones de</text><b style="color: #FF5A09;">ejercicios</b>
                         </div>
                     </a>
                     <a href="{% url 'ejercicios' %}">
                         <div class="dashboard-cuadros">
-                            <img src="{% static 'img/bd.png' %}" alt="">
+                            <img src="{% static 'img/tick.png' %}" alt="">
                             <text id="text1">Estado de</text><b style="color: #FF5A09;">ejercicios</b>
                         </div>
                     </a>
