Arreglo de estilos

--- a/Templates/maestro/calificaciones.html
+++ b/Templates/maestro/calificaciones.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" style="background-color: #333645;">
         <div class="row">
             <nav class="nav-menu">
                 <a href="{% url 'dashboard' %}" style="text-decoration: none;">
@@ -93,6 +93,15 @@
                         </ul>
 
                         {% endfor %}
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis auctor erat, sed elementum urna. Curabitur id nisl pulvinar, fermentum enim porta, elementum enim. Integer sed leo scelerisque, sodales sem malesuada, tempus lacus. Suspendisse laoreet, lectus vitae auctor sodales, tortor purus fermentum magna, vitae finibus felis sapien gravida enim. Cras non pulvinar est. Fusce lacus nibh, commodo at pharetra vel, vehicula suscipit libero. Donec egestas blandit nisl sed suscipit.
+
+Morbi sed odio diam. Sed pharetra sed mauris in fermentum. Proin eu lorem ut neque euismod sollicitudin id sit amet ligula. Maecenas ipsum erat, vehicula vitae nulla quis, ornare suscipit nulla. Vivamus pretium tellus ac dolor auctor, sit amet ornare tellus mollis. Suspendisse tempus, mi id accumsan lacinia, enim odio consectetur magna, id faucibus arcu nibh et magna. Pellentesque ut iaculis risus. Ut vel varius odio.
+
+Quisque quam est, facilisis in ipsum a, dignissim tempor augue. Donec a justo sit amet lorem mattis pretium. Nulla ut eros eget diam volutpat rutrum nec id nunc. Curabitur sed est urna. Cras non massa efficitur, suscipit ipsum non, condimentum sem. Maecenas hendrerit maximus risus, eget placerat nibh aliquet eget. Etiam tincidunt dolor non nisl vestibulum, in venenatis arcu tempor. Cras iaculis venenatis ligula. Ut lacinia est ipsum, ut commodo sapien ullamcorper egestas. Maecenas finibus rutrum mauris, et ornare turpis efficitur at. Integer pulvinar porttitor turpis, eu pretium ligula finibus et.
+
+Integer sed hendrerit lorem. Vivamus vitae mauris gravida, mollis quam in, scelerisque dolor. Phasellus ullamcorper risus efficitur ultricies lobortis. Sed vel lacus vel purus sollicitudin aliquet. Phasellus mollis sem diam, in tincidunt dolor posuere sed. Suspendisse non elit rhoncus, convallis nisi non, ornare sapien. Ut pulvinar neque vitae imperdiet euismod.
+
+Nulla a massa tortor. Vestibulum enim nibh, tristique at hendrerit vel, ornare ac nisi. Pellentesque vulputate porta nulla, sit amet lobortis mi sagittis feugiat. Aliquam eu erat sed lorem auctor blandit eget vitae lacus. Aenean vulputate convallis sodales. Fusce quis elementum diam. Morbi quis placerat urna. Ut fringilla ligula quis justo imperdiet, ac mollis lacus molestie. Morbi lacus neque, dapibus tincidunt justo et, consequat euismod metus. Quisque fringilla, dui sit amet pretium euismod, lectus leo ultrices leo, facilisis malesuada magna enim in magna. Aliquam fringilla leo ipsum, vel pulvinar arcu malesuada elementum. Vivamus sit amet orci ac dui tempor blandit. Aliquam felis leo, fringilla eu arcu ac, aliquet egestas velit.
                     </ul>
                 </div>
             </div>
