--- a/Static/css/estilos.css
+++ b/Static/css/estilos.css
@@ -857,7 +857,7 @@
 .principalCalificaciones {
   background-color: #333645;
   width: 100%;
-  height: 85%;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -883,6 +883,7 @@
   border-radius: 10px;
   padding-top: 20px;
   padding-bottom: 20px;
+  margin-bottom: 20px;
 }
 .contenidoCalificaciones > p {
   font-weight: bold;
@@ -914,7 +915,7 @@
 }
 /*--------Estilos Ejercicios Maestro------------*/
 .principalEjercicios {
-  height: 85%;
+  height: auto;
   width: 100%;
   background-color: #333645;
   display: flex;
@@ -930,6 +931,7 @@
   border-radius: 10px;
   padding-top: 20px;
   padding-bottom: 20px;
+  margin-bottom: 20px;
 }
 .contenidoEjercicios > ul > li {
   margin-left: 25px;
