--- a/Templates/maestro/calificaciones.html
+++ b/Templates/maestro/calificaciones.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container" style="background-color: ;">
+    <div class="container" style="background-color: #333645;">
         <div class="row">
             <nav class="nav-menu">
                 <a href="{% url 'dashboard' %}" style="text-decoration: none;">
@@ -91,7 +91,6 @@
                             </li>
                             {% endfor %}
                         </ul>
-
                         {% endfor %}
                     </ul>
                 </div>
