--- a/Templates/actividadesEjercicios.html
+++ b/Templates/actividadesEjercicios.html
@@ -15,6 +15,14 @@
 	<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> -->
 	<!-- <script src="{% static 'libs/jquery.html-svg-connect.js'%}"></script> -->
 	<!-- <link rel="stylesheet" href="{% static 'css/drag.css'%}"> -->
+	<script>
+		document.addEventListener('DOMContentLoaded', () => {
+                    const url = location.href.split('/').slice(3).join('/')
+                    if(url !== 'unidad/9/ejercicio/17') {
+                        document.querySelector('#paths-container').remove()
+                    }
+                })
+	</script>
 </head>
 <body>
 	<div id="principalEjercicios">
