*fix* Closing "option" tag template

--- a/Templates/ejercicios/ejercicio8-2.html
+++ b/Templates/ejercicios/ejercicio8-2.html
@@ -67,7 +67,7 @@
    <!-- buena -->
    <option value="a">Resultado nulo</option>
    <option value="b">Resultado de cero</option>
-   <option value="c">Resultado normal, pues se omite el nulo/option>
+   <option value="c">Resultado normal, pues se omite el nulo</option>
  </select> 
  <br>
 
